--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^3.18.0",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.19.2",
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
-    "postgrator-cli": "^3.1.0"
+    "postgrator-cli": "^3.1.0",
+    "treeize": "^2.1.2",
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
