--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.2",
     "morgan": "^1.9.1",
+    "path": "^0.12.7",
     "pg": "^7.12.1",
     "postgrator-cli": "^3.1.0",
     "treeize": "^2.1.2",
